# ajedrez-n

./: .gitignore  CMakeLists.txt  LICENSE  Piece.h  PieceFactory.h  README.md  diagrama.mdj  main.cpp
game/: Board.cpp  Board.h  Engine.cpp  Engine.h  Player.h
global/: Global.h
pieces/: Bishop.cpp  Bishop.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  PieceFactory.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
src/: CMakeLists.txt  main.cpp
src/backend/game/: AI.cpp  AI.h  Board.cpp  Board.h  Engine.cpp  Engine.h
src/backend/global/: Global.h
src/backend/pieces/: Bishop.cpp  Bishop.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  PieceFactory.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
src/frontend/: Game.cpp  Game.h
src/frontend/global/: Paths.h  Window.h
src/frontend/graphics/: Label.cpp  Label.h
src/frontend/states/: Credits.cpp  Credits.h  MainMenu.cpp  MainMenu.h  Play.cpp  Play.h  Rules.cpp  Rules.h  SelectN.cpp  SelectN.h  State.h
src/global/: Global.h  Window.h
test/: AITest.cpp  BoardTest.cpp  CMakeLists.txt  EngineTest.cpp  main.cpp  test_de_test.cpp
